--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8088
 
+spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
+spring.datasource.username=root
+spring.datasource.password=DANEKpalam55
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=false
