--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-server.port=8088
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
 spring.datasource.username=root
 spring.datasource.password=DANEKpalam55
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.generate-ddl=false
